tests/run-pass/enum-glob-import-crate.rs
#![feature(plugin)]
#![plugin(clippy)]
#![deny(clippy)]

use std::*;

fn main() { }
